--- a/data-structure-learning-search/pom.xml
+++ b/data-structure-learning-search/pom.xml
@@ -2,16 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>java-data-structure-learning</artifactId>
+        <groupId>com.panli.bigdata</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.panli.bigdata</groupId>
-    <artifactId>java-data-structure-learning</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>data-structure-learning-sort</module>
-        <module>data-structure-learning-search</module>
-    </modules>
+    <artifactId>data-structure-learning-search</artifactId>
 
 
 </project>
