--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>data-structure-learning-tree</module>
         <module>data-structure-learning-stack</module>
         <module>data-structure-learning-queue</module>
+        <module>data-structure-learning-linkedlist</module>
     </modules>
 
 
