--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,5 @@
 .idea/workspace.xml
 src/main/resources/
 src/test/
-data-structure-learning-sort/src/test/
-data-structure-learning-sort/target/
+data-structure-learning-*/src/test/
+data-structure-learning-*/target/
