--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>data-structure-learning-stack</module>
         <module>data-structure-learning-queue</module>
         <module>data-structure-learning-linkedlist</module>
+        <module>data-structure-learning-leetcode</module>
+        <module>data-structure-learning-sword-offer</module>
     </modules>
 
 
