--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,9 @@
         <module>data-structure-learning-leetcode</module>
         <module>data-structure-learning-sword-offer</module>
         <module>data-structure-learning-interview</module>
+        <module>data-structure-learning-interview-questions</module>
+        <module>thread-producer-consumer</module>
+        <module>java-design-pattern</module>
     </modules>
 
 
